<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/ui_space_large">

    <TextView style="@style/TextAppearance.DopamineCut.Headline" android:text="@string/my_change_title" />
    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_space_large"
        android:gravity="center" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ui_space_large"
        android:enabled="false"
        android:text="@string/next_goal" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />
</LinearLayout>
